force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
/* ... */
.email{
    display: flex;
    justify-content: center;
    align-items: flex-start;
    height: 50%;
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 12px;
    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
    justify-content: flex-end;
}
.profileIcon{
    height:75%;
    width:15%;
    margin-inline: 2%;
    border-radius: 50%;
}


.secondRow{
    display: flex;
    flex-direction: row;
    height:6%;
    width:100%;
    margin-top:2%;
    align-items: center;
}
 /* ----- ------- ------- ------ ------ ------ ------ ------ -------  */
      /* ----- ------ ------- ------- --- Search Section --------------- ------- ---------- */
     
    
      .seachContainer{
      display: flex;
      justify-content: center;
      align-items: center;
      gap: 0.5rem;
      background: white;
      border-radius: 0.5rem;
      box-shadow: 0px 0px 15px 0px #00000033;
      padding-inline: .5rem;
      width:35%;
      height:100%;
      margin-left:1%;
      }
      .iconSection{      
        height: 100%;
        /* width: 10%; */
        width: 15%;
        transition: all linear 0.4s;
      }
      .iconSection path{
        stroke: #ABB7C2;
      }
      .searchInput{
        width: 100%;
      
        max-width: 100%;
        height: 100%;
        border: none;
        flex-grow: 1;
        transition: all linear 0.4s;

      }
      .searchInput::placeholder{
        font-size: 18px;
        color: #ABB7C2;
        font-family: Poppins;
        line-height: 26px;
      }
      .searchInput:focus-visible{
        outline: none;
        border: none;
      }
      .seachContainer .searchInput:focus-visible {
        box-shadow: none;
      }
      
      /* ----- ------ ------- ------- --- Search END Section --------------- ------- ---------- */
  
  /* ===== ===== ========== ===== ===== ========== ===== ===== ========== ===== ===== ==========  */



.refresh-div{
    height: 100%;
    width:10%;
    cursor: pointer;
    border-radius: 6px;
    margin-right: 1%;
    margin-left: 53%;
    box-shadow: 0px 0px 5px 0px #00000040;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 5px;
}
.refresh{
    width:90%;
}



.footer{
    height: 8%;
    margin-top: 1%;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}
.button{
    height:2rem;
    width:7rem;
    border-radius: 6px;
    /* font-size: 18px; */
    font-size: 1rem;
    line-height: 20px;
    text-align: center;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;

    /* border: none; */
    border: 1px solid #00AEFF;
    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
}
.cancel{
    margin-right: 0.5rem;
    background: #FFFF;
    color: #00AEFF;
    box-shadow: 0px 3px 12px 0px #4A3AFF2E;

}
.next{
    margin-left:0.5rem;
    background: #00AEFF;
    box-shadow: 0px 3px 12px 0px #4A3AFF2E;

}


.documents{
    
    height:66%;
    margin-left: 1%;
    margin-right: 1%;
    border-radius: 0.5rem;

    display: grid;
    justify-content: center;
    align-items: start;
    justify-items: center;
    grid-template-columns: repeat(4, 1fr);
    overflow-y: auto;
    max-height: 75%;
    gap: 1%;
    margin-top: 1%;
    padding-block-start: 0.5%;
}
.docs-container{
    border-radius: 6px;
    
    height: 11rem;
    width:95%;    
    background: #FFFFFF;
    box-shadow: 0px 0px 5px 0px #00000040;
    cursor: pointer;
}



.docFirstRow{
    margin: 5%;
    display: flex;
    flex-direction: row;
    /* height: 10%; */
    height: 15%;
}
.small{
    height:100%;
    /* height:10%; */
    width:10%;
}
.docName{
    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
    font-size: 12px;
    font-weight: 500;
    line-height: 13.2px;
    text-align: left;
    width:88%;
    overflow:hidden;
    text-overflow: ellipsis;
    margin-left: 3%;
    display: flex;
    align-items: center;
}

.docSecondRow{
    background: #D9D9D980;
    box-shadow: 0px 0px 1px 0px #00000040 inset;
    margin-inline: 5%;
    height:50%;
    border-radius: 0.5rem;
}
.big{
    height:80%;
    width:40%;
    margin-top: 5%;
}

.docThirdRow{
    margin-top: 10%;
    margin-inline: 5%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    
}
.size{
    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
    font-size: 12px;
    font-weight: 400;
    line-height: 11px;
    text-align: left;

}
.date{
    
    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
    font-size: 12px;
    font-weight: 400;
    line-height: 11px;
    text-align: left;
    margin-left: 2.5rem;

}

input:focus{
    outline: none;
}

.selected{
    outline-style: groove;
    outline-color: #00AEFF;
    outline-width: 1px;
    box-shadow: 1px 1px 5px 1px #00AEFF;
}

/* .docs-container:hover{ */
.hover-effect:hover{
    box-shadow: 1px 1px 5px 1px #00000040;
}

.emptySearch{
    height:66%;
    width:100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    
}
.emptyIcon{
    height: 25%;
    width:25%;
}
.empty-text{
    width:100%;
    font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
    font-size: xx-large;
    margin-top: 1%;
}
/* ... */

